@@ -111,6 +111,7 @@ version_entry_st sup_versions[] = {
 	 .obsolete = 0,
 	 .only_extension = 1,
 	 .post_handshake_auth = 1,
+	 .multi_ocsp = 1,
 	 .key_shares = 1,
 	 .false_start = 0, /* doesn't make sense */
 	 .tls_sig_sem = SIG_SEM_TLS13
